--- a/spring-rest-jpa-h2/pom.xml
+++ b/spring-rest-jpa-h2/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.9</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
