--- a/spring-web-oauth2-client/src/main/resources/application.yml
+++ b/spring-web-oauth2-client/src/main/resources/application.yml
@@ -4,11 +4,21 @@ spring:
       client:
         registration:
           google:
-            client-id: your-client-id-obtained-from-google-api-console
-            client-secret: your-client-secret-obtained-from-google-api-console
+            client-id: 336980058256-msnmq7lnjccogfqq973fsd6rtaam8unq.apps.googleusercontent.com
+            client-secret: ThcAH38YPILC8vsT_bi9ylYE
           github:
-            client-id: your-client-id-obtained-from-github
-            client-secret: your-client-secret-obtained-from-github
+            client-id: 86bf15eaf22ff38dc199
+            client-secret: cbd0e2d2e4acd2e95cbe2154b4e767852df073e7
+          okta:
+            client-id: 0oa1d5wdxwi9jdE4I357
+            client-secret: faONiOKZdSFltymYcV0ekjqhpXGVv7-Hbcl4c1GX
+        provider:
+          okta:
+            authorization-uri: https://dev-169923.okta.com/oauth2/v1/authorize
+            token-uri: https://dev-169923.okta.com/oauth2/v1/token
+            user-info-uri: https://dev-169923.okta.com/oauth2/v1/userinfo
+            user-name-attribute: sub
+            jwk-set-uri: https://dev-169923.okta.com/oauth2/v1/keys
   thymeleaf:
     cache: false
 logging:
